#59 Simplify next page fetch and fix tooltip visibility issue

--- a/containers/ActivityStream/components/style.scss
+++ b/containers/ActivityStream/components/style.scss
@@ -9,7 +9,7 @@
     background: $timeline-color;
     height: 100%;
     position: absolute;
-    top: 36px;
+    top: 68px;
     left: 34px;
     width: 4px;
   }
@@ -21,9 +21,7 @@
 
 :global(.ActivityStream) {
   :global(.ActivityStream__Activity) {
-    position: relative;
     z-index: 100;
-    overflow: hidden;
     background: $off-white;
 
     :global(.ActivityStream__Icon) {
@@ -63,11 +61,6 @@
       }
     }
 
-    :global(.Message__toggle) {
-      margin: -$padding * 2;
-      padding-right: $padding * 2;
-    }
-
     :global(.Message__header) {
       padding: $padding * 2;
 
@@ -75,16 +68,6 @@
         font-weight: bold;
         font-size: 1.25rem;
       }
-    }
-
-    :global(.Message__body) {
-      border-top: 1px solid $border-color;
-      padding: 0;
-    }
-
-    &:global(.Message--focused)::after {
-      top: 100%;
-      height: 40px;
     }
   }
 
